--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<a href="https://github.com/SatriaYudistira/Blockchain"><b><br /> Source Code</b></a>
 									</p>
 									<ul class="actions special">
-										<li><a href="images/blockchain.pdf" download="newfilename" class="button">Download the PDF</a></li>
+										<li><a href="images/blockchain.pdf" download="blockchain" class="button">Download the PDF</a></li>
 									</ul>
 								</article>
 
