--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</header>
 									<img src="images/block.jpg" alt="" class="image fit"/>
 									<p>
-										In this project, I made paper about blockchain technology and the future of the blockchain technology.
+										In this project, I wrote paper about blockchain technology and the future of the blockchain technology.
 										<a href="https://github.com/SatriaYudistira/Blockchain"><b><br /> Source Code</b></a>
 									</p>
 									<ul class="actions special">
