--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
 									</ul>
 								</article>
 								
+								<article>
+									<header>
+										<h2>Compound Interest<br />
+										project</h2>
+									</header>
+									<img src="images/visual.jpg" alt="" class="image fit" width="120" height="250"/>
+									<p>In this project, I made javascript program to calculate the Compound Interest. 
+									<ul class="actions special">
+										<li><a href="project/index.html" class="button">Program</a></li>
+									</ul>
+								</article>
+								
 							</section>
 
 					</div>
