--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<h2>Compound Interest<br />
 										project</h2>
 									</header>
-									<img src="images/visual.jpg" alt="" class="image fit" width="120" height="250"/>
+									<img src="images/pic2.jpg" alt="" class="image fit" width="120" height="250"/>
 									<p>In this project, I made javascript program to calculate the Compound Interest. 
 									<ul class="actions special">
 										<li><a href="project/index.html" class="button">Program</a></li>
