--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										project</h2>
 									</header>
 									<img src="images/pic2.jpg" alt="" class="image fit" width="120" height="250"/>
-									<p>In this project, I made javascript program to calculate the Compound Interest. 
+									<p>In this project, I made javascript program to calculate the Compound Interest with the graph using chart.js. 
 									<ul class="actions special">
 										<li><a href="project/index.html" class="button">Program</a></li>
 									</ul>
