--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
 					</footer>
 
 				<!-- Copyright -->
-					<!--<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					<div id="copyright">
+						<ul><li>&copy; 2022 Satria Yudistira Irawan</li><li>All Right Reserved</li></ul>
 					</div>
-				    -->
 
 			</div>
 
