--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 							<header class="major">
 								<h1>My Journey</h1>
 							</header>
-							<div style="float: left; padding: 20px"><img src="images/S1.jpg" alt="" /></div>
+							<div style="float: left; padding: 20px"><img src="images/S1.jpg" width="60" height="20" alt="" /></div>
 							<p>
 								My Journey started when I was <b>16</b> years old, I have not finished high school yet
 								but my parents want me to pursue my education abroad in the United States. Since my school does not require me to speak English.
