--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>2231 Catlin Ave. No. 5427<br />
-								Superior, WI 54880</p>
+								<p>823N 161st Pl<br />
+								Shoreline, WA 98133</p>
 							</section>
 							<section>
 								<h3>Social</h3>
