--- a/aboutme.html
+++ b/aboutme.html
@@ -61,8 +61,9 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>823N 161st Pl<br />
-								Shoreline, WA 98133</p>
+								<p>
+								Shoreline, WA 98133
+								</p>
 							</section>
 							<section>
 								<h3>Social</h3>
